2009-12-01  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/sh/sh4/fpu/fpu_control.h (__set_fpscr): New prototype.

2009-12-11  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/sh/bits/fcntl.h: Redefine O_SYNC and
	O_DSYNC to match 2.6.33+ kernels.
	* sysdeps/unix/sysv/linux/powerpc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/ia64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/fcntl.h: Likewise.

2009-12-10  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11000]
	* nis/nss_nis/nis-hosts.c (_nss_nis_gethostbyname4_r): Always set
	*herrnop before returning.
	* nis/nss_nisplus/nisplus-hosts.c (internal_gethostbyname2_r):
	Likewise.
	* nss/nss_files/files-hosts.c (_nss_files_gethostbyname4_r): Handle
	TRYAGAIN errors separately.
	* sysdeps/posix/getaddrinfo.c (gaih_inet): Fix error handling of
	*name4_r after functions.

2009-12-09  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11046]
	* sysdeps/unix/sysv/linux/ptsname.c (__ptsname_internal): Fix kernel
	version check.

2009-11-05  Bruno Haible  <bruno@clisp.org>

	[BZ #11056]
	* posix/unistd.h (execve, fexecve, execv, execvp, execvpe): Mark the
	argv argument as non-NULL.
	(execle, execl, execlp): Mark the first ARG argument as non-NULL.

-2009-12-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/socket.h: Define mmsghdr and declare
	recvmmsg.
	* sysdeps/unix/sysv/linux/syscalls.list: Add entry for recvmmsg.
	* sysdeps/unix/sysv/linux/Versions: Add recvmmsg for GLIBC_2.12.

2009-12-04  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/s390/s390-64/dl-trampoline.S: Add CFI for the call saved
	registers.
	* sysdeps/s390/s390-32/dl-trampoline.S: Likewise.
	* sysdeps/s390/s390-32/s390-mcount.S: Add CFI.
	* sysdeps/s390/s390-64/s390x-mcount.S: Add CFI.
